Changement du texte HTML dans index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Salam GitHub!</h1>
-    <p>Hadhy faza test bech nt3allem kifah ndeployi projet.</p>
+    <h1>Bienvenue sur mon projet GitHub!</h1>
+<p>Ce projet est une expérience pour apprendre Git et GitHub.</p>
+
   </div>
 </body>
 </html>
